force-app/main/default/objects/Year__c/Year__c.object-meta.xml
<CustomObject>
    <label>Year</label>
    <nameField>
        <label>Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>