force-app/main/default/objects/Year__c/fields/Is_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Year</label>
    <type>Checkbox</type>
</CustomField>