force-app/main/default/objects/Year__c/fields/Year_Id__c.field-meta.xml
<CustomField>
    <fullName>Year_Id__c</fullName>
    <displayFormat>YEAR-{00000}</displayFormat>
    <label>Year Id</label>
    <type>AutoNumber</type>
</CustomField>