force-app/main/default/objects/Year__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Current_Year__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Year_Start_Date__c</columns>
    <columns>Year_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>